Update index.html title fix

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <body>
     <div class="header">
         <div class="starburst">Dea & Dev Singh Chitalkar</div>
-        <h1>Spices from our Farm in Kerala</h1>
+        <h1>Dea & Dev's Kerala Spice Farm</h1>
     </div>
 
     
